syntax = "proto2";
package notifier_entity;
option go_package = "etop.vn/backend/pb/etop/etc/notifier_entity";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum NotifierEntity {
  unknown = 0;
  fulfillment = 1;
  money_transaction_shipping = 2;
}
